--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "~12.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^12.0.0",
+    "primeng": "13.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
